--- a/blocmetrics/app/views/tracked_apps/index.html.haml
+++ b/blocmetrics/app/views/tracked_apps/index.html.haml
@@ -1,4 +1,4 @@
-
-%script{:src => "Chart.js"}
-
+/ %script{:src => "assets/javascripts/tracked_apps.js"}
 %canvas#canvas{:height => "450", :width => "600"}
+
+%p "#{@tracked_apps.first}" "#{@events}"
