--- a/blocmetrics/app/views/events/index.html.haml
+++ b/blocmetrics/app/views/events/index.html.haml
@@ -1,11 +1,95 @@
 %h1 Events#index
-%p 
-	= @events.count
-%p 
-	= @events.each do |a|
-		.row
-			= link_to a.name, event_path(a)
-		.row
-			#{a.location}
-		.row
-			#{a.ip_address}
+
+%canvas#canvas{:height => "100", :width => "200"}
+
+!!!
+%html
+	%head
+		%meta{:charset => "utf-8"}/
+    :css
+      .bar {
+        fill: steelblue;
+      }
+      
+      .bar:hover {
+        fill: brown;
+      }
+      
+      .title {
+        font: bold 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+      
+      .axis {
+        font: 10px sans-serif;
+      }
+      
+      .axis path,
+      .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+      }
+      
+      .x.axis path {
+        display: none;
+      }
+	%body
+		%script{:src => "http://d3js.org/d3.v3.min.js"}
+		:javascript
+      var margin = {top: 80, right: 180, bottom: 80, left: 180},
+          width = 960 - margin.left - margin.right,
+          height = 500 - margin.top - margin.bottom;
+      
+      var x = d3.scale.ordinal()
+          .rangeRoundBands([0, width], .1, .3);
+      
+      var y = d3.scale.linear()
+          .range([height, 0]);
+      
+      var xAxis = d3.svg.axis()
+          .scale(x)
+          .orient("bottom");
+      
+      var yAxis = d3.svg.axis()
+          .scale(y)
+          .orient("left")
+          .ticks(8, "%");
+      
+      var svg = d3.select("body").append("svg")
+          .attr("width", width + margin.left + margin.right)
+          .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+          .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+      
+      var ip_addressData = [{
+
+      }]
+      
+      
+        svg.append("text")
+            .attr("class", "title")
+            .attr("x", x(data[0].name))
+            .attr("y", -26)
+            .text("Application Clicks");
+      
+        svg.append("g")
+            .attr("class", "x axis")
+            .attr("transform", "translate(0," + height + ")")
+            .call(xAxis)
+          .selectAll(".tick text")
+            .call(wrap, x.rangeBand());
+      
+        svg.append("g")
+            .attr("class", "y axis")
+            .call(yAxis);
+      
+        svg.selectAll(".bar")
+            .data(data)
+          .enter().append("rect")
+            .attr("class", "bar")
+            .attr("x", function(d) { return x(d.name); })
+            .attr("width", x.rangeBand())
+            .attr("y", function(d) { return y(d.value); })
+            .attr("height", function(d) { return height - y(d.value); });
+      });
+
