--- a/blocmetrics/app/views/events/index.html.haml
+++ b/blocmetrics/app/views/events/index.html.haml
@@ -11,27 +11,55 @@
         margin: 1px;
         color: white;
       }
+      .chart rect {
+        fill: steelblue;
+      }
   %body
-    .chart
-    %script{:src => "http://d3js.org/d3.v3.min.js"}
+
+    %h1 Events#index
+    %p #{@visits}
+
+    %p #{@events.count}
+    %p #{@clicks.count}
+
+    %svg.chart
+    
+    %script{:src => "assets/javascripts/d3.v3.js"}
     :javascript
-      var data = raw @visits;
+      var data = #{ raw @visits.to_json };
+      var width = 960,
+        height = 500;
+
+      var x = d3.scale.ordinal()
+        .rangeRoundBands([0, width], .1);
+
+      var y = d3.scale.linear()
+        .rangeRound([height, 0]);
       
-      var x = d3.scale.linear()
-          .domain([0, d3.max(data)])
-          .range([0, 420]);
-      
+      // Our color bands
+      var color = d3.scale.ordinal()
+          .range(["#308fef", "#5fa9f3", "#1176db"]);
+
+      // Use our X scale to set a bottom axis
+      var xAxis = d3.svg.axis()
+          .scale(x)
+          .orient("bottom");
+
+      // Same for our left axis
+      var yAxis = d3.svg.axis()
+          .scale(y)
+          .orient("left")
+          .tickFormat(d3.format(".2s"));
+
       d3.select(".chart")
         .selectAll("div")
           .data(data)
         .enter().append("div")
-          .style("width", function(d) { return x(d) + "px"; })
+          .style("height", function(d) { return y(d) + "py"; })
           .text(function(d) { return d; });
 
-%h1 Events#index
-%p #{@visits}
+      var barWidth = width / data.length;
 
-%p #{@events.count}
-%p #{@clicks.count}
+
 
 / %canvas#canvas{:height => "100", :width => "200"}
